Correct overflow in thumbnail box.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,6 +24,8 @@ Text Domain: BehWeb
 .thumbnail {
 	min-height: 500px;
 	height: 500px;
+	width: 100%;
+	overflow: auto;
 }
 
 #main {
